########################################################################
## VHDL extras included into this project
## https://code.google.com/p/vhdl-extras/
########################################################################
add_subdirectory(extras)

########################################################################
## Pothos interconnect library and utils
########################################################################
add_subdirectory(Pothos)
